# bubble-bot

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.chief/prds/main/: prd.json  progress.md
.github/: depandabot.yml
.github/workflows/: ci.yml  release.yml
man/man1/: bubble-bot.1
src/: cli.rs  config.rs  hooks.rs  main.rs  shell.rs
src/auth/: keychain.rs  mod.rs
src/docker/: clean.rs  containers.rs  images.rs  mod.rs  networks.rs
src/runtime/: go.rs  mod.rs  node.rs  php.rs  rust.rs
src/services/: mod.rs  mysql.rs  postgres.rs  redis.rs
src/templates/: base.dockerfile  chief.dockerfile  entrypoint.sh  go.dockerfile  mod.rs  node.dockerfile  php.dockerfile  rust.dockerfile
