[package]
name = "bubble-boy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
indicatif = "0.17"
libc = "0.2"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
